# GameOf15

./: README.md
GameOf15/: GameOf15.sln
GameOf15/GameOf15/: CustomUtils.h  Formatters.h  Game.cpp  Game.h  GameBoard.h  GameController.cpp  GameController.h  GameOf15.cpp  GameOf15.vcxproj  GameOf15.vcxproj.filters  LeaderBoard.cpp  LeaderBoard.h  Matrix.h  MatrixComponents.h  OrtogonalNodes.h  Podium.cpp  Podium.h  PodiumDataSaver.cpp  PodiumDataSaver.h  Sorter.h  resource.h
GameOf15/GameOf15/Debug/: GameOf15.exe.recipe  GameOf15.ilk  game.obj.enc  gamecontroller.obj.enc  gameof15.obj.enc  podium.obj.enc  vc142.idb
GameOf15/GameOf15/Debug/GameOf15.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameOf15.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SOURCE/CMAKE/GameOf15CMake/: CMakeLists.txt
SOURCE/CMAKE/GameOf15CMake/GameOf15CMake/: CMakeLists.txt  GameOf15CMake.cpp  GameOf15CMake.h
SOURCE/CMAKE/GameOf15CMake/GameOf15CMake/Game/: Game.cpp  Game.h  GameController.cpp  GameController.h
SOURCE/CMAKE/GameOf15CMake/GameOf15CMake/Matrix/: Matrix.h  OrtogonalNodes.h
SOURCE/CMAKE/GameOf15CMake/GameOf15CMake/Podium/: Podium.h  PodiumDataSaver.cpp  PodiumDataSaver.h
SOURCE/CMAKE/GameOf15CMake/GameOf15CMake/Utils/: Sorter.h
SOURCE/GameOf15/GameOf15/: GameController.h  GameOf15.aps  MatrixComponents.h  Podium.cpp  Podium.h  PodiumDataSaver.h
SOURCE/GameOf15/GameOf15/Debug/: GameOf15.exe.recipe  GameOf15.ilk  vc142.idb
SOURCE/SLN/GameOf15/GameOf15/: Game.h  GameController.cpp  GameController.h  GameOf15.cpp  Podium.cpp  (+3 more)
(+17 files in other folders)
